timApp/static/stylesheet.scss
/* ... */
li.tab.active a, li.tab.pinned a {
    color: white;
}

input[type="file"] {
    margin: 0;
    padding: 0;
    border: none;
}

.smalllink {
    font-size: 50%;
    margin-top: -3em;
    margin-bottom: 3em;
    margin-right: 1em;
    text-align: right;
}

.notes:hover, .speaker:hover {
    background-color: white;
    display: block;
    z-index: 9;
}

/* For user list in teacher view ================================*/
.userFixed {
    position: fixed;
    bottom: 0;
    top: 20px;
    right: 0;
    @media(max-width: $screen-xs-max) {
        width: 200px;
    }
    @media(min-width: $screen-sm-min) {
        width: 200px;
    }
    @media(min-width: $screen-md-min) {
        width: 300px;
    }
    @media(min-width: $screen-lg-min) {
        width: 423px;
    }
}

.userlist {

    $list-max-height: 95vh;
    height: 100%;

    overflow: auto;
    overflow-x: hidden;
    min-height: 25em;
    /* min-height: $list-max-height; */
    /*max-height: $list-max-height; */

    /*position: relative;*/
    background-color: #e6e6e6;
    padding: 2px;
}

.close {
    float: right;
    position: relative;
}

/* TODO: check how to prevent too narrow menu better way than min-width */
.actionButtons {
    @include container-fixed();
    position: absolute;
    white-space: nowrap;
    border-radius: 3px;
    background-color: #f8f8ff;
    z-index: 100;
    min-height: 50px;
    min-width: 200px;
}

.menuButtons {
    display: table;
    position: absolute;
    white-space: nowrap;
    border-radius: 3px;
    padding: 12px;
    margin: 0;
    background-color: #f8f8ff;
    z-index: 100;
    min-height: 50px;
}

.actionButtonContent {
    white-space: normal;
    max-width: 600px;
    max-height: 200px;
    overflow-x: hidden;
    overflow-y: scroll;
}

.refPopup {
    position: relative;
    white-space: nowrap;
    margin: 0;
    background-color: #f8f8ff;
    z-index: 100;
    font-size: 12px;
}

.refPopup span {
    padding: 3px;
    display: table;
}

.refPopup label {
    font-weight: bold;
}

.actionButtonContent {
    white-space: normal;
    max-width: 600px;
    max-height: 200px;
    overflow-x: hidden;
    overflow-y: scroll;
}

.actionButtonRow {
    display: table-row;
}

@import "csRun";
.questionButton {
    margin: 0.2em;
}

@media print {
    body {
        margin: 0;
        max-width: 100%;
    }

    .material {
        width: 100%;
    }

    .readline {
        display: none;
    }

    .parContent {
        position: static;
        border: 0;
        max-width: 100%;
    }

    .par {
        position: static;
        border: 0;
        max-width: 100%;
    }

    .headerlink {
        visibility: hidden;
    }

    /* Harmaa varjo dokumentilta pois */
    .material {
        box-shadow: none !important;
        border: none !important;
    }
}

.speaker {
    position: absolute;
    left: 105%;
    width: 400px;
}

.sagecell_editor {
    line-height: 13px;
    margin-bottom: 8px;
    font-size: 10pt;
}

pre.sagecell_pyout {
    border: none;
}

pre.sagecell_stdout {
    border: none;
}

button:disabled, input[type="submit"]:disabled, input[type="button"]:disabled, .areaEditButton[disabled]:hover {
    background: #AAA;
    color: #CCC;
}

.borderless {
    border-collapse: collapse;
}

.borderless td {
    border: none;
    outline: none;
}

.fullwidth {
    width: 100%;
}

.checkbox-td {
    text-align: center;
}

.addBottomContainer {
    margin: 0.25em 0 0.25em 1em;
    position: relative;
    padding-top: 19px;
    border-top: 1px solid #e5e5e5;
    text-align: center;
    padding-bottom: 1em;
}

#teksti {
    font-size: 15px;
    line-height: 15px;
    font-family: Consolas, Monaco, Courier New, Courier, monospace;
    height: auto;
    width: 100%;
    border-radius: 5px;
    border: 1px solid rgb(183, 183, 183);
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
}

#teksti:focus {
    outline: none;
}

.lazyHidden {
    visibility: hidden;
}

.lazyVisible {
    margin-top: 0;
    padding-top: 0;
}

.dialog {
    position: fixed;
    z-index: 6;
    border: 1px solid;
    background: white;
    top: 0;
}

.collapsed .parContent {
    display: none;
    z-index: 10;
    position: relative;
    margin-left: 1em;
    padding-top: 0.25em;
    padding-bottom: 1em;
    margin-top: 0.25em;
    margin-bottom: 0.25em;
    border-bottom: 1px solid transparent;
    border-top: 1px solid transparent;
    border-right: 1px solid transparent;
}

p.docsettings {
    display: none;
}

.shortedit {
    max-width: 4.5em;
}

.taskSummary {
    margin-bottom: 2em;
    border: 2px solid black;
    border-radius: 10px;
    padding: 1em;
}

.taskSmallSummary {
    position: fixed;
    left: 5px;
    top: 35px;
    z-index: 200;
    font-size: 9px;
}

.inputSmall {
    font-size: 8px;
    font-weight: normal;
}

.slides {
    code {
        white-space: pre;
    }
}

.figure {
    text-align: center;
}

.runo {
    text-align: center;
    font-style: italic;
    margin-bottom: 2em;
    font-size: 0.9em;

    td {
        text-align: center;
    }

    .parContent {
        text-align: center;
    }
}

.wideButton {
    @extend .btn, .btn-primary, .btn-block;
}

body > .footer {
    padding-top: 19px;
    border-top: $header-footer-border;
    position: absolute;
    bottom: 0;
    width: 100%;
    height: $footer-height;
}

.table-alias td:first-child {
    text-align: right;
}

.table-borderless tbody tr td, .table-borderless tbody tr th, .table-borderless thead tr th {
    border: none;
}

.table .table-borderless  {
    border: none;
}

.total-borderless  {
    border: none !important;
}

.total-borderless tbody tr td, .total-borderless tbody tr th, .total-borderless thead tr th {
    border: none !important;
}


#doctext {
    font-family: $font-family-monospace;
}

.pluginRenameObject {
    display: inline-block;
    margin: 5px;
    min-width: 80px;
}

#pluginRenameForm {
    padding-bottom: 15px;
}
/* ... */

